2009-05-28  Lars Hartmann  <lars (at) chaotika (dot) org>

	* replace/stpcpy.c (stpcpy): fixed memory error.

	* src/liblputil.c (lputil_joinstr): rewritten to use stpcpy(3)
	instead of strcat(3).

	Added replacement for stpcpy:
	* replace/stpcpy.c (stpcpy): added.
	* configure.ac (AC_REPLACE_FUNCS): added stpcpy.

	added lputil_int64len:
	* test/01_lputil_int64len.c: added tests for lputil_int64len.
	* test/Makefile.am: added tests for lputil_int64len.
	* include/util.h (lputil_int64len): added prototype.
	* src/liblputil.c (lputil_int64len): added.

2009-05-27  Lars Hartmann  <lars (at) chaotika (dot) org>

	* src/liblpversion.c (lpversion_reset): does now reset the suffix
	enum too.

2009-05-19  Lars Hartmann  <lars (at) chaotika (dot) org>

	Changed parameters to const:
	* src/liblpversion.c (lpversion_suffix_parse): updated.
	* include/version.h (lpversion_parse): updated.

2009-05-13  Lars Hartmann  <lars (at) chaotika (dot) org>

	* test/Makefile.am (02_lpversion_parse_SOURCES): added
	02_lpversion_parse.txt.

	* test/01_lputil_splitstr.c: extended test to use lputil_joinstr()
	and check if the returned string is the same as the one originally
	fed to lputil_splitstr().

	* src/liblputil.c (lputil_joinstr): added string join function.

	* src/liblpatom.c (lpatom_init): fixed compile error which was
	introduced by commit d1649c56802cb5ea25a3fbec51495ab9c1a3a2e2.

	* src/liblpatom.c: fixed some lint(1) warnings.

	* src/liblpatom.c (lpatom_init): renamed symbol atom to handle.

2009-05-12  Lars Hartmann  <lars (at) chaotika (dot) org>

	* src/liblputil.c (lputil_splitstr): fixed buffer overflow.

2009-05-07  Lars Hartmann  <lars (at) chaotika (dot) org>

	Random Doxygen documentation updates:
	* include/archives.h: updated.
	* include/atom.h: updated.
	* include/util.h: updated
	* include/version.h: updated.
	* include/xpak.h: updated.

2009-05-06  Lars Hartmann  <lars (at) chaotika (dot) org>

	* test/03_lpatom_parse.txt: added some more tests.
