@@ -1,3 +1,4 @@
 noinst_LTLIBRARIES    = libreplace.la
 libreplace_la_SOURCES =
 libreplace_la_LIBADD  = @LTLIBOBJS@
+EXTRA_DIST	      = replace.h
