@@ -5,7 +5,7 @@ libportage_la_SOURCES = liblpatom.c liblputil.c liblpxpak.c liblparchives.c   \
 libportage_la_LIBADD = ../replace/libreplace.la
 libportage_la_LDFLAGS = -larchive
 
-AM_CPPFLAGS = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/replace
 METASOURCES = AUTO
 
 # dev-targets
